# Programming_II_Project_USI

./: .env.example  .gitignore  ARCHITECTURE.md  CLAUDE.md  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.claude/: settings.json
backend/: __init__.py  config.py  main.py
backend/agents/: __init__.py  analytics_agent.py  backtest_agent.py  base.py  data_agent.py  explanation_agent.py  orchestrator.py  strategy_agent.py
backend/analytics/: __init__.py  metrics.py  visualizations.py
backend/api/: __init__.py  schemas.py
backend/api/routes/: __init__.py  backtest.py  data.py  explain.py  strategies.py
backend/backtest/: __init__.py  engine.py  execution.py  portfolio.py  risk.py
backend/data/: __init__.py  cleaner.py
backend/data/fetchers/: __init__.py  base.py  crypto_fetcher.py  equity_fetcher.py  fx_fetcher.py
backend/database/: __init__.py  connection.py  models.py
backend/llm/: __init__.py  base.py  factory.py  gemini_provider.py  null_provider.py
backend/strategies/: __init__.py  base.py  bollinger_bands.py  donchian_breakout.py  rsi_mean_reversion.py  sma_crossover.py
docs/: agents.md  data-sources.md  strategies.md
frontend/: Dockerfile  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/api/: client.ts
frontend/src/components/: AssetSelector.tsx  DrawdownChart.tsx  EquityCurve.tsx  MetricsPanel.tsx  MonthlyHeatmap.tsx  StrategyConfigForm.tsx  TradeList.tsx
frontend/src/pages/: Dashboard.tsx  NewBacktest.tsx  RunResults.tsx  Strategies.tsx
scripts/: init_db.py  load_initial_data.py
tests/: conftest.py  test_engine_basics.py  test_engine_no_lookahead.py  test_llm.py  test_metrics.py  test_strategies.py
