# pyproject.toml — modern Python project configuration.
# Build system, tool configs (ruff, mypy, pytest) all live here.

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "quantbacktest"
version = "0.1.0"
description = "A web-based backtesting framework for retail quantitative traders (USI Programming II Project 2.8)."
readme = "README.md"
requires-python = ">=3.11"
license = {file = "LICENSE"}
authors = [
    {name = "USI Programming II Team"},
]

# Runtime deps are duplicated here so the project is `pip install -e .`-friendly.
# Pinned versions live in requirements.txt.
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "SQLAlchemy>=2.0",
    "alembic>=1.13",
    "pandas>=2.2",
    "numpy>=2.1",
    "scipy>=1.14",
    "yfinance>=0.2.46",
    "pandas-datareader>=0.10",
    "ccxt>=4.4",
    "requests>=2.32",
    "plotly>=5.24",
    "APScheduler>=3.10",
    "structlog>=24.4",
    "python-dateutil>=2.9",
    "tenacity>=9.0",
    "exchange-calendars>=4.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "httpx>=0.27",
    "ruff>=0.7",
    "mypy>=1.13",
]

# -----------------------------------------------------------------------------
# Ruff — linter + formatter (one-stop)
# -----------------------------------------------------------------------------
[tool.ruff]
line-length = 100
target-version = "py311"
exclude = [".venv", "frontend", "build", "dist"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "UP",   # pyupgrade
    "N",    # pep8-naming
    "SIM",  # flake8-simplify
    "RUF",  # ruff-specific
]
ignore = [
    "E501",  # line too long — handled by formatter
    "B008",  # FastAPI uses `Depends()` in defaults idiomatically
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# -----------------------------------------------------------------------------
# Mypy — strict-ish typing for backend
# -----------------------------------------------------------------------------
[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true        # third-party libs without stubs
files = ["backend"]
exclude = ["frontend", "build", "dist"]

# -----------------------------------------------------------------------------
# Pytest
# -----------------------------------------------------------------------------
[tool.pytest.ini_options]
minversion = "8.0"
addopts = [
    "-ra",                  # short summary for skips/xfails
    "--strict-markers",     # unknown markers fail
    "--strict-config",
    "--cov=backend",
    "--cov-report=term-missing",
]
testpaths = ["tests"]
asyncio_mode = "auto"
filterwarnings = [
    "error",
    "ignore::DeprecationWarning:yfinance.*",   # yfinance still uses some deprecated pandas calls
    "ignore::DeprecationWarning:pandas_datareader.*",
]

# -----------------------------------------------------------------------------
# Coverage
# -----------------------------------------------------------------------------
[tool.coverage.run]
branch = true
source = ["backend"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]
